# aiwas

./: README.md  main.py  pyproject.toml  requirements.txt  sample_catalina.out  streamlit.sh
aiwas/: README.md
backend/: ai_analyzer.py  config.py  db_manager.py  langchain_chain.py  log_generator.py  log_monitor.py
frontend/: app.py
